--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           var txt;
           var person = prompt("Please enter your name:");
           if (person == null || person == "") {
-              txt = "User cancelled the prompt.";
+              txt = "My Lovely Friend";
           } else {
               txt = person;
           }
